--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.legendarystore</groupId>
 	<artifactId>legendary-store-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>LegendaryStoreApp</name>
 	<description>Backend for Angular review project.</description>
 	<properties>
